frontend/front-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavilable: 1
      maxSurge: 1
  minReadySeconds: 20
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: ghcr.io/05-project/05-project-client:20241126-31339cb
        name: frontend-app
        port:
        - containerPort: 3000
