frontend/front-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  namespace: frontend
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: 05-project.narumir.io
    http:
      paths:
      - backend:
          service:
            name: frontend-service
            port:
              number: 3000
        path: /
        pathType: Prefix
  - host: www.05-project.narumir.io
    http:
      paths:
      - backend:
          service:
            name: frontend-service
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
    - hosts:
        - 05-project.narumir.io
        - www.05-project.narumir.io
      secretName: letsencrypt
